Fix cube and prism spacing

--- a/stylesheets/cube.scss
+++ b/stylesheets/cube.scss
@@ -2,7 +2,7 @@
   width: 400px;
   height: 400px;
   position: relative;
-  margin: 0 auto;
+  margin: 50px auto;
   perspective: 1200px;
 }
 #cube {
