--- a/stylesheets/rectangular.scss
+++ b/stylesheets/rectangular.scss
@@ -2,7 +2,7 @@
   width: 600px;
   height: 400px;
   position: relative;
-  margin: 0 auto;
+  margin: 50px auto;
   perspective: 1200px;
 }
 #rectangular {
